--- a/01_scrape_data.ipynb
+++ b/01_scrape_data.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "7f74754b-bca5-4a90-bd76-48adf683ab99",
    "metadata": {},
    "outputs": [],
    "source": [
     "from bs4 import BeautifulSoup\n",
     "import pandas as pd\n",
-    "import requests "
+    "import requests \n",
+    "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "1876d3d0-b975-4d49-995a-9aeadc95af87",
    "metadata": {},
    "outputs": [],
@@ -27,10 +28,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
+   "id": "7c5373ee-1575-4a7a-bd27-2f83eb2cf452",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "b69f3e67-2175-4585-8f17-a84ef130968b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://fbref.com//en/matches/a1d0d529/Ipswich-Town-Liverpool-August-17-2024-Premier-League\n",
+      "https://fbref.com//en/matches/09b1742e/Liverpool-Brentford-August-25-2024-Premier-League\n",
+      "https://fbref.com//en/matches/a7ab7a12/North-West-Derby-Manchester-United-Liverpool-September-1-2024-Premier-League\n",
+      "https://fbref.com//en/matches/674bfe9e/Liverpool-Nottingham-Forest-September-14-2024-Premier-League\n",
+      "https://fbref.com//en/matches/32a9539b/Liverpool-Bournemouth-September-21-2024-Premier-League\n",
+      "https://fbref.com//en/matches/f2633f1d/Wolverhampton-Wanderers-Liverpool-September-28-2024-Premier-League\n",
+      "https://fbref.com//en/matches/49ea224b/Crystal-Palace-Liverpool-October-5-2024-Premier-League\n",
+      "https://fbref.com//en/matches/99b4737c/Liverpool-Chelsea-October-20-2024-Premier-League\n",
+      "https://fbref.com//en/matches/68aa1099/Arsenal-Liverpool-October-27-2024-Premier-League\n",
+      "https://fbref.com//en/matches/7d114c70/Liverpool-Brighton-and-Hove-Albion-November-2-2024-Premier-League\n",
+      "https://fbref.com//en/matches/737af5bf/Liverpool-Aston-Villa-November-9-2024-Premier-League\n",
+      "https://fbref.com//en/matches/eb6f8e39/Southampton-Liverpool-November-24-2024-Premier-League\n",
+      "https://fbref.com//en/matches/0bd6ad44/Liverpool-Manchester-City-December-1-2024-Premier-League\n",
+      "https://fbref.com//en/matches/ca898c29/Newcastle-United-Liverpool-December-4-2024-Premier-League\n",
+      "https://fbref.com//en/matches/a436996c/Liverpool-Fulham-December-14-2024-Premier-League\n",
+      "https://fbref.com//en/matches/1e1cea4c/Tottenham-Hotspur-Liverpool-December-22-2024-Premier-League\n",
+      "https://fbref.com//en/matches/1f604fbd/Liverpool-Leicester-City-December-26-2024-Premier-League\n",
+      "https://fbref.com//en/matches/c1a66ac0/West-Ham-United-Liverpool-December-29-2024-Premier-League\n",
+      "https://fbref.com//en/matches/4cef863f/North-West-Derby-Liverpool-Manchester-United-January-5-2025-Premier-League\n",
+      "https://fbref.com//en/matches/118f8df8/Nottingham-Forest-Liverpool-January-14-2025-Premier-League\n",
+      "https://fbref.com//en/matches/5e8445c1/Brentford-Liverpool-January-18-2025-Premier-League\n",
+      "https://fbref.com//en/matches/ee59115f/Liverpool-Ipswich-Town-January-25-2025-Premier-League\n",
+      "https://fbref.com//en/matches/886603cd/Bournemouth-Liverpool-February-1-2025-Premier-League\n"
+     ]
+    }
+   ],
    "source": [
     "# Matches already played in the PL 24-25 Season\n",
     "match_report_tags = soup.find_all('td', {'data-stat': 'match_report'})\n",
@@ -38,53 +90,37 @@
     "\n",
     "for i in match_report_tags:\n",
     "    if i.text == 'Match Report':\n",
-    "        match_report_urls.append(\"https://fbref.com/\" + i.find('a')['href'])"
+    "        match_report_urls.append(\"https://fbref.com/\" + i.find('a')['href'])\n",
+    "\n",
+    "df_list = []\n",
+    "for match_report_url in match_report_urls:\n",
+    "    df_list.append(extract_shooting_stats(match_report_url))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "b2fb790f-939e-41bd-831d-1f25b044cbcb",
+   "execution_count": 15,
+   "id": "b4c4292f-bb85-42c9-be29-097e72c5ecbe",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Shooting stats \n",
-    "match_report_url = \"https://fbref.com//en/matches/a1d0d529/Ipswich-Town-Liverpool-August-17-2024-Premier-League\"\n",
-    "response = requests.get(match_report_url)\n",
-    "soup = BeautifulSoup(response.text, 'html.parser')\n",
-    "\n",
-    "match_title = soup.find('h1').text\n",
-    "shots_table = soup.find('table', {'id': 'shots_all'})\n",
-    "\n",
-    "match_list = []\n",
-    "player_list = []\n",
-    "xg_list = []\n",
-    "psxg_list = []\n",
-    "outcome_list = []\n",
-    "distance_list = []\n",
-    "body_part_list = []\n",
-    "\n",
-    "for i in shots_table.find_all('tr'):\n",
-    "    player_element = i.find('td', {'data-stat': 'player'})\n",
-    "    \n",
-    "    if player_element:\n",
-    "        if player_element.text == 'Mohamed Salah':\n",
-    "            player_list.append(player_element.text)\n",
-    "            xg_list.append(i.find('td', {'data-stat':'xg_shot'}).text)\n",
-    "            psxg_list.append(i.find('td', {'data-stat':'psxg_shot'}).text)\n",
-    "            outcome_list.append(i.find('td', {'data-stat':'outcome'}).text)\n",
-    "            distance_list.append(i.find('td', {'data-stat':'distance'}).text)\n",
-    "            body_part_list.append(i.find('td', {'data-stat':'body_part'}).text)\n",
-    "\n",
-    "data = {'player': player_list, 'xG': xg_list, 'PSxG': psxg_list, 'outcome': outcome_list, 'distance': distance_list, 'body_part': body_part_list}\n",
-    "\n",
-    "df = pd.DataFrame(data)"
+    "pd.concat(df_list).to_csv('data/df.csv',index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "id": "77d16c7b-7a50-46f8-9fdd-50ff84472788",
+   "execution_count": 17,
+   "id": "4b58c7c3-d4fe-44ed-a99d-7fbb5b19d79d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp = pd.concat(df_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "b4b24124-b94a-42b0-bc47-1cb5032585ba",
    "metadata": {},
    "outputs": [
     {
@@ -108,6 +144,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>match</th>\n",
        "      <th>player</th>\n",
        "      <th>xG</th>\n",
        "      <th>PSxG</th>\n",
@@ -118,16 +155,8 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Mohamed Salah</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>Blocked</td>\n",
-       "      <td>16</td>\n",
-       "      <td>Left Foot</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>Ipswich Town vs. Liverpool Match Report – Satu...</td>\n",
        "      <td>Mohamed Salah</td>\n",
        "      <td>0.41</td>\n",
        "      <td>0.82</td>\n",
@@ -137,20 +166,142 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>Liverpool vs. Brentford Match Report – Sunday ...</td>\n",
        "      <td>Mohamed Salah</td>\n",
-       "      <td>0.21</td>\n",
-       "      <td>0.26</td>\n",
-       "      <td>Saved</td>\n",
-       "      <td>19</td>\n",
+       "      <td>0.43</td>\n",
+       "      <td>0.58</td>\n",
+       "      <td>Goal</td>\n",
+       "      <td>12</td>\n",
+       "      <td>Left Foot</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Manchester United vs. Liverpool Match Report –...</td>\n",
+       "      <td>Mohamed Salah</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>0.77</td>\n",
+       "      <td>Goal</td>\n",
+       "      <td>16</td>\n",
+       "      <td>Left Foot</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Arsenal vs. Liverpool Match Report – Sunday Oc...</td>\n",
+       "      <td>Mohamed Salah</td>\n",
+       "      <td>0.29</td>\n",
+       "      <td>0.79</td>\n",
+       "      <td>Goal</td>\n",
+       "      <td>13</td>\n",
+       "      <td>Left Foot</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Liverpool vs. Brighton &amp; Hove Albion Match Rep...</td>\n",
+       "      <td>Mohamed Salah</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>0.16</td>\n",
+       "      <td>Goal</td>\n",
+       "      <td>16</td>\n",
+       "      <td>Left Foot</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Liverpool vs. Aston Villa Match Report – Satur...</td>\n",
+       "      <td>Mohamed Salah</td>\n",
+       "      <td>0.67</td>\n",
+       "      <td>0.72</td>\n",
+       "      <td>Goal</td>\n",
+       "      <td>6</td>\n",
        "      <td>Left Foot</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>Southampton vs. Liverpool Match Report – Sunda...</td>\n",
+       "      <td>Mohamed Salah</td>\n",
+       "      <td>0.52</td>\n",
+       "      <td>0.88</td>\n",
+       "      <td>Goal</td>\n",
+       "      <td>17</td>\n",
+       "      <td>Left Foot</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Newcastle United vs. Liverpool Match Report – ...</td>\n",
+       "      <td>Mohamed Salah</td>\n",
+       "      <td>0.44</td>\n",
+       "      <td>0.96</td>\n",
+       "      <td>Goal</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Right Foot</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Newcastle United vs. Liverpool Match Report – ...</td>\n",
+       "      <td>Mohamed Salah</td>\n",
+       "      <td>0.13</td>\n",
+       "      <td>0.86</td>\n",
+       "      <td>Goal</td>\n",
+       "      <td>11</td>\n",
+       "      <td>Left Foot</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Tottenham Hotspur vs. Liverpool Match Report –...</td>\n",
+       "      <td>Mohamed Salah</td>\n",
+       "      <td>0.87</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>Goal</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Left Foot</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Tottenham Hotspur vs. Liverpool Match Report –...</td>\n",
+       "      <td>Mohamed Salah</td>\n",
+       "      <td>0.62</td>\n",
+       "      <td>0.87</td>\n",
+       "      <td>Goal</td>\n",
+       "      <td>11</td>\n",
+       "      <td>Right Foot</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Liverpool vs. Leicester City Match Report – Th...</td>\n",
+       "      <td>Mohamed Salah</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>0.41</td>\n",
+       "      <td>Goal</td>\n",
+       "      <td>15</td>\n",
+       "      <td>Left Foot</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>West Ham United vs. Liverpool Match Report – S...</td>\n",
        "      <td>Mohamed Salah</td>\n",
        "      <td>0.06</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>Goal</td>\n",
+       "      <td>17</td>\n",
+       "      <td>Left Foot</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Liverpool vs. Ipswich Town Match Report – Satu...</td>\n",
+       "      <td>Mohamed Salah</td>\n",
+       "      <td>0.16</td>\n",
+       "      <td>0.55</td>\n",
+       "      <td>Goal</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Left Foot</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Bournemouth vs. Liverpool Match Report – Satur...</td>\n",
+       "      <td>Mohamed Salah</td>\n",
        "      <td>0.05</td>\n",
-       "      <td>Saved</td>\n",
-       "      <td>11</td>\n",
+       "      <td>0.72</td>\n",
+       "      <td>Goal</td>\n",
+       "      <td>14</td>\n",
        "      <td>Left Foot</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -158,26 +309,146 @@
        "</div>"
       ],
       "text/plain": [
-       "          player    xG  PSxG  outcome distance  body_part\n",
-       "0  Mohamed Salah  0.02  0.00  Blocked       16  Left Foot\n",
-       "1  Mohamed Salah  0.41  0.82     Goal        7  Left Foot\n",
-       "2  Mohamed Salah  0.21  0.26    Saved       19  Left Foot\n",
-       "3  Mohamed Salah  0.06  0.05    Saved       11  Left Foot"
+       "                                               match         player    xG  \\\n",
+       "1  Ipswich Town vs. Liverpool Match Report – Satu...  Mohamed Salah  0.41   \n",
+       "2  Liverpool vs. Brentford Match Report – Sunday ...  Mohamed Salah  0.43   \n",
+       "0  Manchester United vs. Liverpool Match Report –...  Mohamed Salah  0.20   \n",
+       "2  Arsenal vs. Liverpool Match Report – Sunday Oc...  Mohamed Salah  0.29   \n",
+       "2  Liverpool vs. Brighton & Hove Albion Match Rep...  Mohamed Salah  0.06   \n",
+       "2  Liverpool vs. Aston Villa Match Report – Satur...  Mohamed Salah  0.67   \n",
+       "3  Southampton vs. Liverpool Match Report – Sunda...  Mohamed Salah  0.52   \n",
+       "1  Newcastle United vs. Liverpool Match Report – ...  Mohamed Salah  0.44   \n",
+       "3  Newcastle United vs. Liverpool Match Report – ...  Mohamed Salah  0.13   \n",
+       "5  Tottenham Hotspur vs. Liverpool Match Report –...  Mohamed Salah  0.87   \n",
+       "6  Tottenham Hotspur vs. Liverpool Match Report –...  Mohamed Salah  0.62   \n",
+       "4  Liverpool vs. Leicester City Match Report – Th...  Mohamed Salah  0.05   \n",
+       "1  West Ham United vs. Liverpool Match Report – S...  Mohamed Salah  0.06   \n",
+       "2  Liverpool vs. Ipswich Town Match Report – Satu...  Mohamed Salah  0.16   \n",
+       "2  Bournemouth vs. Liverpool Match Report – Satur...  Mohamed Salah  0.05   \n",
+       "\n",
+       "   PSxG outcome distance   body_part  \n",
+       "1  0.82    Goal        7   Left Foot  \n",
+       "2  0.58    Goal       12   Left Foot  \n",
+       "0  0.77    Goal       16   Left Foot  \n",
+       "2  0.79    Goal       13   Left Foot  \n",
+       "2  0.16    Goal       16   Left Foot  \n",
+       "2  0.72    Goal        6   Left Foot  \n",
+       "3  0.88    Goal       17   Left Foot  \n",
+       "1  0.96    Goal        5  Right Foot  \n",
+       "3  0.86    Goal       11   Left Foot  \n",
+       "5  1.00    Goal        4   Left Foot  \n",
+       "6  0.87    Goal       11  Right Foot  \n",
+       "4  0.41    Goal       15   Left Foot  \n",
+       "1  0.08    Goal       17   Left Foot  \n",
+       "2  0.55    Goal        5   Left Foot  \n",
+       "2  0.72    Goal       14   Left Foot  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df"
+    "temp[temp.outcome == 'Goal']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "333ff222-f9a9-4c36-84c4-5d5005a5d431",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extract_shooting_stats(match_report_url):\n",
+    "    print(match_report_url)\n",
+    "    time.sleep(10)  # Adds a 2-second delay before making a request\n",
+    "    \n",
+    "    response = requests.get(match_report_url)\n",
+    "    soup = BeautifulSoup(response.text, 'html.parser')\n",
+    "    \n",
+    "    match_title = soup.find('h1').text\n",
+    "    shots_table = soup.find('table', {'id': 'shots_all'})\n",
+    "    \n",
+    "    match_list = []\n",
+    "    player_list = []\n",
+    "    xg_list = []\n",
+    "    psxg_list = []\n",
+    "    outcome_list = []\n",
+    "    distance_list = []\n",
+    "    body_part_list = []\n",
+    "    \n",
+    "    for i in shots_table.find_all('tr'):\n",
+    "        player_element = i.find('td', {'data-stat': 'player'})\n",
+    "\n",
+    "        \n",
+    "        if player_element:\n",
+    "            if player_element.text == 'Mohamed Salah' or player_element.text == 'Mohamed Salah (pen)':\n",
+    "                match_list.append(match_title)\n",
+    "                player_list.append(player_element.text)\n",
+    "                xg_list.append(i.find('td', {'data-stat':'xg_shot'}).text)\n",
+    "                psxg_list.append(i.find('td', {'data-stat':'psxg_shot'}).text)\n",
+    "                outcome_list.append(i.find('td', {'data-stat':'outcome'}).text)\n",
+    "                distance_list.append(i.find('td', {'data-stat':'distance'}).text)\n",
+    "                body_part_list.append(i.find('td', {'data-stat':'body_part'}).text)\n",
+    "    \n",
+    "    data = {'match': match_list, 'player': player_list, 'xG': xg_list, 'PSxG': psxg_list, 'outcome': outcome_list, 'distance': distance_list, 'body_part': body_part_list}\n",
+    "    \n",
+    "    df = pd.DataFrame(data)\n",
+    "\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "25e5aaba-c741-4075-9421-3d6b73642a3d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://fbref.com//en/matches/f2633f1d/Wolverhampton-Wanderers-Liverpool-September-28-2024-Premier-League\n",
+      "Jean-Ricner Bellegarde\n",
+      "Jørgen Strand Larsen\n",
+      "Matheus Cunha\n",
+      "Luis Díaz\n",
+      "Trent Alexander-Arnold\n",
+      "Dominik Szoboszlai\n",
+      "Trent Alexander-Arnold\n",
+      "Ibrahima Konaté\n",
+      "Mario Lemina\n",
+      "\n",
+      "Mohamed Salah\n",
+      "Rayan Aït-Nouri\n",
+      "Mohamed Salah (pen)\n",
+      "Mohamed Salah\n",
+      "Matheus Cunha\n",
+      "Carlos Forbs\n",
+      "Nélson Semedo\n",
+      "Curtis Jones\n",
+      "Ibrahima Konaté\n",
+      "                                               match               player  \\\n",
+      "0  Wolverhampton Wanderers vs. Liverpool Match Re...        Mohamed Salah   \n",
+      "1  Wolverhampton Wanderers vs. Liverpool Match Re...  Mohamed Salah (pen)   \n",
+      "2  Wolverhampton Wanderers vs. Liverpool Match Re...        Mohamed Salah   \n",
+      "\n",
+      "     xG  PSxG     outcome distance   body_part  \n",
+      "0  0.49  0.00  Off Target       17  Right Foot  \n",
+      "1  0.79  0.60        Goal       13   Left Foot  \n",
+      "2  0.04  0.05       Saved       19   Left Foot  \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(extract_shooting_stats(\"https://fbref.com//en/matches/f2633f1d/Wolverhampton-Wanderers-Liverpool-September-28-2024-Premier-League\"))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "333ff222-f9a9-4c36-84c4-5d5005a5d431",
+   "id": "92dde333-3831-4a0d-b872-a204be3d430e",
    "metadata": {},
    "outputs": [],
    "source": []
